[gd_scene load_steps=9 format=3 uid="uid://dyircm282ljin"]

[ext_resource type="Script" path="res://Scenes/entities/Enviorment/World.gd" id="1_wm5li"]
[ext_resource type="Texture2D" uid="uid://bl7ju3nxur2ot" path="res://tiles_spritesheet.png" id="2_hk67d"]
[ext_resource type="PackedScene" uid="uid://day15d46sf25q" path="res://Scenes/entities/player/Player.tscn" id="3_hu04u"]
[ext_resource type="Script" path="res://Scenes/entities/Enviorment/sec1.gd" id="4_aha1b"]
[ext_resource type="PackedScene" uid="uid://dh88rujqyoe8i" path="res://Scenes/entities/enemies/enemy_1.tscn" id="4_iob3m"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ntpbl"]
texture = ExtResource("2_hk67d")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, 0, 16, 0, 16, 16, -16, 16)
1:0/0 = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, 8, 16, 8, 16, 16, -16, 16)
2:0/0 = 0
2:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:0/0/physics_layer_0/angular_velocity = 0.0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, 8, 16, 8, 16, 16, -16, 16)
0:1/0 = 0
0:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_0/angular_velocity = 0.0
1:1/0 = 0
1:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:1/0/physics_layer_0/angular_velocity = 0.0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(16, -16, -16, -16, -16, 16, 16, 16, 16, -16)
2:1/0 = 0
2:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:1/0/physics_layer_0/angular_velocity = 0.0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(16, -16, -16, -16, -16, 16, 16, 16, 16, -16)

[sub_resource type="TileSet" id="TileSet_0d4fs"]
tile_size = Vector2i(32, 32)
physics_layer_0/collision_layer = 16
physics_layer_0/collision_mask = 135
navigation_layer_0/layers = 1
sources/0 = SubResource("TileSetAtlasSource_ntpbl")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6ooi4"]
size = Vector2(20, 287)

[node name="World" type="Node2D"]
script = ExtResource("1_wm5li")

[node name="TileMap" type="TileMap" parent="."]
position = Vector2(-2, 0)
tile_set = SubResource("TileSet_0d4fs")
cell_quadrant_size = 32
format = 2
layer_0/tile_data = PackedInt32Array(262139, 131072, 1, 262140, 131072, 1, 262141, 131072, 1, 262142, 131072, 1, 262143, 131072, 1, 196608, 131072, 1, 262145, 131072, 1, 262146, 131072, 1, 196611, 131072, 1, 196612, 131072, 1, 196610, 131072, 1, 196609, 131072, 1, 262144, 131072, 1, 327679, 131072, 1, 327678, 131072, 1, 327677, 131072, 1, 327676, 131072, 1, 327675, 131072, 1, 262147, 131072, 1, 262148, 131072, 1, 131076, 65536, 1, 131075, 65536, 1, 131074, 65536, 1, 131073, 65536, 1, 131072, 65536, 1, 196607, 65536, 1, 196606, 65536, 1, 196605, 65536, 1, 196604, 65536, 1, 196603, 65536, 1, 196602, 65536, 1, 262138, 65536, 1, 262137, 65536, 1, 262136, 0, 0, 262135, 0, 0, 262134, 0, 0, 327674, 131072, 1, 327673, 131072, 1, 327672, 131072, 1, 327671, 131072, 1, 327670, 131072, 1, 327669, 131072, 1, 262133, 65536, 1, 262132, 65536, 1, 262131, 65536, 1, 262130, 65536, 1, 262129, 0, 0, 262128, 0, 0, 262127, 0, 0, 262126, 0, 0, 327668, 131072, 1, 327667, 131072, 1, 327666, 131072, 1, 327665, 131072, 1, 327664, 131072, 1, 327663, 131072, 1, 327662, 131072, 1, 262125, 65536, 1, 262124, 65536, 1, 262123, 65536, 1, 327661, 131072, 1, 327660, 131072, 1, 327659, 131072, 1, 262122, 0, 0, 262121, 0, 0, 262120, 0, 0, 262119, 0, 0, 262118, 0, 0, 327658, 131072, 1, 327657, 131072, 1, 327656, 131072, 1, 327655, 131072, 1, 327654, 131072, 1, 262117, 65536, 1, 262116, 65536, 1, 327653, 131072, 1, 327652, 131072, 1, 327651, 131072, 1, 262115, 65536, 1, 262114, 65536, 1, 262113, 131072, 1, 196577, 65536, 1, 196576, 131072, 1, 131040, 65536, 1, 131039, 131072, 1, 65503, 65536, 1, 65502, 131072, 1, -34, 65536, 1, -35, 131072, 1, 393187, 131072, 1, 393186, 131072, 1, 327650, 131072, 1, -393250, 0, 1, -327714, 0, 1, -262178, 0, 1, -196642, 0, 1, -131106, 0, 1, -65570, 0, 1, -393249, 0, 1, -327713, 0, 1, -262177, 0, 1, -196641, 0, 1, -131105, 0, 1, -65569, 0, 1, -393248, 0, 1, -327712, 0, 1, -262176, 0, 1, -196640, 0, 1, -131104, 0, 1, -65568, 0, 1, -393247, 0, 1, -327711, 0, 1, -262175, 0, 1, -196639, 0, 1, -131103, 0, 1, -65567, 0, 1, -393246, 0, 1, -327710, 0, 1, -262174, 0, 1, -196638, 0, 1, -131102, 0, 1, -65566, 0, 1, -393245, 0, 1, -327709, 0, 1, -262173, 0, 1, -196637, 0, 1, -131101, 0, 1, -65565, 0, 1, -393244, 0, 1, -327708, 0, 1, -262172, 0, 1, -196636, 0, 1, -131100, 0, 1, -65564, 0, 1, -393243, 0, 1, -327707, 0, 1, -262171, 0, 1, -196635, 0, 1, -131099, 0, 1, -65563, 0, 1, -393242, 0, 1, -327706, 0, 1, -262170, 0, 1, -196634, 0, 1, -131098, 0, 1, -65562, 0, 1, -393241, 0, 1, -327705, 0, 1, -262169, 0, 1, -196633, 0, 1, -131097, 0, 1, -65561, 0, 1, -393240, 0, 1, -327704, 0, 1, -262168, 0, 1, -196632, 0, 1, -131096, 0, 1, -65560, 0, 1, -393239, 0, 1, -327703, 0, 1, -262167, 0, 1, -196631, 0, 1, -131095, 0, 1, -65559, 0, 1, -393238, 0, 1, -327702, 0, 1, -262166, 0, 1, -196630, 0, 1, -131094, 0, 1, -65558, 0, 1, -393237, 0, 1, -327701, 0, 1, -262165, 0, 1, -196629, 0, 1, -131093, 0, 1, -65557, 0, 1, -393236, 0, 1, -327700, 0, 1, -262164, 0, 1, -196628, 0, 1, -131092, 0, 1, -65556, 0, 1, -393235, 0, 1, -327699, 0, 1, -262163, 0, 1, -196627, 0, 1, -131091, 0, 1, -65555, 0, 1, -393234, 0, 1, -327698, 0, 1, -262162, 0, 1, -196626, 0, 1, -131090, 0, 1, -65554, 0, 1, -393233, 0, 1, -327697, 0, 1, -262161, 0, 1, -196625, 0, 1, -131089, 0, 1, -65553, 0, 1, -393232, 0, 1, -327696, 0, 1, -262160, 0, 1, -196624, 0, 1, -131088, 0, 1, -65552, 0, 1, -393231, 0, 1, -327695, 0, 1, -262159, 0, 1, -196623, 0, 1, -131087, 0, 1, -65551, 0, 1, -393230, 0, 1, -327694, 0, 1, -262158, 0, 1, -196622, 0, 1, -131086, 0, 1, -65550, 0, 1, -393229, 0, 1, -327693, 0, 1, -262157, 0, 1, -196621, 0, 1, -131085, 0, 1, -65549, 0, 1, -393228, 0, 1, -327692, 0, 1, -262156, 0, 1, -196620, 0, 1, -131084, 0, 1, -65548, 0, 1, -393227, 0, 1, -327691, 0, 1, -262155, 0, 1, -196619, 0, 1, -131083, 0, 1, -65547, 0, 1, -393226, 0, 1, -327690, 0, 1, -262154, 0, 1, -196618, 0, 1, -131082, 0, 1, -65546, 0, 1, -393225, 0, 1, -327689, 0, 1, -262153, 0, 1, -196617, 0, 1, -131081, 0, 1, -65545, 0, 1, -393224, 0, 1, -327688, 0, 1, -262152, 0, 1, -196616, 0, 1, -131080, 0, 1, -65544, 0, 1, -393223, 0, 1, -327687, 0, 1, -262151, 0, 1, -196615, 0, 1, -131079, 0, 1, -65543, 0, 1, -393222, 0, 1, -327686, 0, 1, -262150, 0, 1, -196614, 0, 1, -131078, 0, 1, -65542, 0, 1, -393221, 0, 1, -327685, 0, 1, -262149, 0, 1, -196613, 0, 1, -131077, 0, 1, -65541, 0, 1, -393220, 0, 1, -327684, 0, 1, -262148, 0, 1, -196612, 0, 1, -131076, 0, 1, -65540, 0, 1, -393219, 0, 1, -327683, 0, 1, -262147, 0, 1, -196611, 0, 1, -131075, 0, 1, -65539, 0, 1, -393218, 0, 1, -327682, 0, 1, -262146, 0, 1, -196610, 0, 1, -131074, 0, 1, -65538, 0, 1, -393217, 0, 1, -327681, 0, 1, -262145, 0, 1, -196609, 0, 1, -131073, 0, 1, -65537, 0, 1, -458752, 0, 1, -393216, 0, 1, -327680, 0, 1, -262144, 0, 1, -196608, 0, 1, -131072, 0, 1, -458751, 0, 1, -393215, 0, 1, -327679, 0, 1, -262143, 0, 1, -196607, 0, 1, -131071, 0, 1, -458750, 0, 1, -393214, 0, 1, -327678, 0, 1, -262142, 0, 1, -196606, 0, 1, -131070, 0, 1, -458749, 0, 1, -393213, 0, 1, -327677, 0, 1, -262141, 0, 1, -196605, 0, 1, -131069, 0, 1, -458748, 0, 1, -393212, 0, 1, -327676, 0, 1, -262140, 0, 1, -196604, 0, 1, -131068, 0, 1, -33, 0, 1, -32, 0, 1, -31, 0, 1, -30, 0, 1, -29, 0, 1, -28, 0, 1, -27, 0, 1, -26, 0, 1, -25, 0, 1, -24, 0, 1, -23, 0, 1, -22, 0, 1, -21, 0, 1, -20, 0, 1, -19, 0, 1, -18, 0, 1, -17, 0, 1, -16, 0, 1, -15, 0, 1, -14, 0, 1, -13, 0, 1, -12, 0, 1, -11, 0, 1, -10, 0, 1, -9, 0, 1, -8, 0, 1, -7, 0, 1, -6, 0, 1, -5, 0, 1, -4, 0, 1, -3, 0, 1, -2, 0, 1, -1, 0, 1, -65536, 0, 1, -65535, 0, 1, -65534, 0, 1, -65533, 0, 1, -65532, 0, 1, 65504, 0, 1, 65505, 0, 1, 65506, 0, 1, 65507, 0, 1, 65508, 0, 1, 65509, 0, 1, 65510, 0, 1, 65511, 0, 1, 65512, 0, 1, 65513, 0, 1, 65514, 0, 1, 65515, 0, 1, 65516, 0, 1, 65517, 0, 1, 65518, 0, 1, 65519, 0, 1, 65520, 0, 1, 65521, 0, 1, 65522, 0, 1, 65523, 0, 1, 65524, 0, 1, 65525, 0, 1, 65526, 0, 1, 65527, 0, 1, 65528, 0, 1, 65529, 0, 1, 65530, 0, 1, 65531, 0, 1, 65532, 0, 1, 65533, 0, 1, 65534, 0, 1, 65535, 0, 1, 0, 0, 1, 1, 0, 1, 2, 0, 1, 3, 0, 1, 4, 0, 1, 131041, 0, 1, 131042, 0, 1, 131043, 0, 1, 131044, 0, 1, 131045, 0, 1, 131046, 0, 1, 131047, 0, 1, 131048, 0, 1, 131049, 0, 1, 131050, 0, 1, 131051, 0, 1, 131052, 0, 1, 131053, 0, 1, 131054, 0, 1, 131055, 0, 1, 131056, 0, 1, 131057, 0, 1, 131058, 0, 1, 131059, 0, 1, 131060, 0, 1, 131061, 0, 1, 131062, 0, 1, 131063, 0, 1, 131064, 0, 1, 131065, 0, 1, 131066, 0, 1, 131067, 0, 1, 131068, 0, 1, 131069, 0, 1, 131070, 0, 1, 131071, 0, 1, 65536, 0, 1, 65537, 0, 1, 65538, 0, 1, 65539, 0, 1, 65540, 0, 1, 196578, 0, 1, 196579, 0, 1, 196580, 0, 1, 196581, 0, 1, 196582, 0, 1, 196583, 0, 1, 196584, 0, 1, 196585, 0, 1, 196586, 0, 1, 196587, 0, 1, 196588, 0, 1, 196589, 0, 1, 196590, 0, 1, 196591, 0, 1, 196592, 0, 1, 196593, 0, 1, 196594, 0, 1, 196595, 0, 1, 196596, 0, 1, 196597, 0, 1, 196598, 0, 1, 196599, 0, 1, 196600, 0, 1, 196601, 0, 1)

[node name="Player" parent="." instance=ExtResource("3_hu04u")]
position = Vector2(-34, 1)

[node name="Areas" type="Node2D" parent="."]

[node name="the trail of spikes" type="Area2D" parent="Areas"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Areas/the trail of spikes"]
position = Vector2(-118, -80.5)
shape = SubResource("RectangleShape2D_6ooi4")

[node name="text timer" type="Timer" parent="."]

[node name="sec1" type="Node" parent="." groups=["enemies"]]
script = ExtResource("4_aha1b")

[node name="enemy" parent="sec1" instance=ExtResource("4_iob3m")]
position = Vector2(13, 29)

[connection signal="body_entered" from="Areas/the trail of spikes" to="." method="_on_the_trail_of_spikes_body_entered"]
[connection signal="timeout" from="text timer" to="." method="_on_text_timer_timeout"]
